--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farm Dashboard</title>
+    <title>Jood Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -113,7 +113,6 @@
         </div>
 
     <script>
-        // URL จากฐานข้อมูลของคุณ
         const DATABASE_URL = "https://jood-af2d8-default-rtdb.asia-southeast1.firebasedatabase.app/";
 
         async function updateDashboard() {
