--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
 
     <div class="header">
-        <h1>📊 INVENTORY MONITOR</h1>
+        <h1>📊 INVENTORY</h1>
         <p id="status">กำลังเชื่อมต่อกับ Firebase...</p>
     </div>
 
@@ -113,7 +113,7 @@
         </div>
 
     <script>
-        const DATABASE_URL = "https://jood-af2d8-default-rtdb.asia-southeast1.firebasedatabase.app/";
+        const DATABASE_URL = "https://jood-af2d8-default-rtdb.asia-southeast1.firebasedatabase.app/Players.json";
 
         async function updateDashboard() {
             try {
