--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 </head>
 <body>
 
-    <h1 style="text-align:center;">📊 LIVE MULTI-MONITOR</h1>
+    <h1 style="text-align:center;">📊 MULTI MONITOR</h1>
     
     <div class="controls">
-        <input type="text" id="searchBar" placeholder="🔍 ค้นหาชื่อผู้เล่น..." onkeyup="filterPlayers()">
+        <input type="text" id="searchBar" placeholder="🔍 Search..." onkeyup="filterPlayers()">
     </div>
 
     <div class="dashboard" id="display"></div>
