--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOOD SYSTEM | STREET VERSION</title>
+    <title>JOOD SYSTEM</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Kanit:wght@800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -143,7 +143,7 @@
     <div class="header-box">
         <div class="sub-title">// SYSTEM STATUS: RUNNING</div>
         <h1 class="glitch-text">JOOD SYSTEM</h1>
-        <div style="font-size: 0.8rem; opacity: 0.6;">built by jood-dev-v2 / 2026</div>
+        <div style="font-size: 0.8rem; opacity: 0.6;">built by LuckyZ / 2026</div>
     </div>
     
     <div class="search-container">
