--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
 
     <h1>JOOD FARM</h1>
-    <div class="subtitle">Live Inventory Tracking (Session Gain)</div>
+    <div class="subtitle">Inventory</div>
     
     <div class="search-container">
         <input type="text" id="searchBar" placeholder="Search player name..." onkeyup="render()">
