--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
             "Atomic Orb",
             "Anywhere Door",
             "Handcannon",
-            "Holy Fragment"
+            "Holy Fragment",
+            "Instakill Sword",
+	        "Summon Orb"
         ];
 
         let lastData = {};
