--- a/index.html
+++ b/index.html
@@ -175,11 +175,13 @@
             "Trait Reroll",
             "Cid Sword",
             "Atomic Orb",
+			"Summon Orb",
+		    "Cures Orb",
+		    "Sukuna Finger",
             "Anywhere Door",
             "Handcannon",
             "Holy Fragment",
             "Instakill Sword",
-	        "Summon Orb"
         ];
 
         let lastData = {};
