--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             "Cid Sword",
             "Atomic Orb",
 			"Summon Orb",
-		    "Cures Orb",
+		    "Curse Orb",
 		    "Sukuna Finger",
             "Anywhere Door",
             "Handcannon",
