--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 			"Summon Orb",
 		    "Curse Orb",
 		    "Sukuna Finger",
+			"Red Scarf",
             "Anywhere Door",
             "Handcannon",
             "Instakill Sword",
